[project]
name = "linknest-backend"
version = "2.0.0"
description = "LinkNest API - Link-in-Bio & URL Shortener"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg",
    "alembic",
    "pydantic>=2.0",
    "pydantic-settings",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "python-multipart",
    "httpx",
    "stripe",
    "resend",
    "qrcode[pil]",
    "pillow",
    "redis[hiredis]",
    "dnspython",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "email-validator>=2.3.0",
    "pyjwt>=2.13.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
